# vitrina-cv

./: .env.example  .gitignore  Dockerfile  Makefile  pyproject.toml
.handoff/: 06-cv-04.md  06-cv-05.md
.project-context/: NAVIGATOR.md  infra-services.md  service-map.yaml
.project-context/Core/: coding-standards.md  navigation.md  patterns.md  task-management.md  workflows.md
.project-context/Technical domain/: business-rules.md  contracts.md  dependencies.md  domain.md  glossary.md  navigation.md  project.md  risks.md
.project-context/decisions/: ADR-002-protocolo-vitrina-cv.md  ADR-003-contrato-api-cv.md  ADR-005-gate-pre-vuelo.md  ADR-008-cv-opencv-modelo-preentrenado.md  ADR-009-reparto-puertas-ventanas.md  (+6 more)
eval/: run_eval.py
tests/: api-collection.json  conftest.py  scratch_cv07_verify_room9_separation.py  test_10_cv_02_room_contour_sanitize.py  test_10_cv_05_local_thickness.py  test_10_cv_09_gap3_grosor_local.py  test_11_cv_02_zeroshot_engine.py  test_11_cv_03_merge_semantic_dedup.py  test_11_cv_04_wire_objects_response.py  test_11_cv_06_no_regresion_geometria_motor_activo.py  test_api_suite.py  test_centerline_junctions.py  test_cv09_04_diagonal_pass2.py  test_cv09_09_diagonal_pass2_integration.py  test_cv09_10_logging_simetrico.py  test_cv09_11_no_regresion_5_fixtures.py  test_eval_runner.py  test_filter_interior_components.py  test_mask_cleanup.py  test_mask_cleanup_thin_strokes.py  test_openings_aberturas.py  test_preprocessing.py  test_room_close_settings_and_mask.py  test_run08_diagonal_filter.py  test_scale_ocr.py  test_stairs_candidates.py
(+42 files in other folders)
