[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vitrina-cv"
version = "0.1.0"
description = "Computer vision sidecar for vitrina — floor plan geometry extraction"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # CV dependencies (used in tasks 06-cv-03/04/05)
    "opencv-python>=4.10.0",
    "numpy>=1.26.0",
    "pytesseract>=0.3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vitrina_cv"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "A",
    "SIM", "TCH", "RUF", "S", "PT", "C4",
    "DTZ", "T20", "PIE", "PL", "PERF", "FURB",
]
ignore = ["E501", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"eval/**" = ["T201"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = []
